--- a/nb/training_test_validation_samples_for_templates.ipynb
+++ b/nb/training_test_validation_samples_for_templates.ipynb
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "e4dde07e-b3b5-4cc8-8274-b7ff4b873967",
    "metadata": {
     "tags": []
@@ -1060,22 +1060,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/global/cfs/cdirs/desi/target/fiberassign/tiles/trunk/080/fiberassign-080605.fits.gz\n",
-      "80605 2043 lrgqso\n",
-      "/global/cfs/cdirs/desi/target/fiberassign/tiles/trunk/080/fiberassign-080606.fits.gz\n",
-      "80606 1638 elg\n",
-      "/global/cfs/cdirs/desi/target/fiberassign/tiles/trunk/080/fiberassign-080607.fits.gz\n",
-      "80607 1854 lrgqso\n",
-      "/global/cfs/cdirs/desi/target/fiberassign/tiles/trunk/080/fiberassign-080608.fits.gz\n",
-      "80608 1428 elg\n",
-      "/global/cfs/cdirs/desi/target/fiberassign/tiles/trunk/080/fiberassign-080609.fits.gz\n",
-      "80609 1956 lrgqso\n",
-      "/global/cfs/cdirs/desi/target/fiberassign/tiles/trunk/080/fiberassign-080610.fits.gz\n",
-      "80610 1657 elg\n",
       "/global/cfs/cdirs/desi/target/fiberassign/tiles/trunk/080/fiberassign-080612.fits.gz\n",
       "80612 2893 bgsmws\n",
-      "/global/cfs/cdirs/desi/target/fiberassign/tiles/trunk/080/fiberassign-080613.fits.gz\n",
-      "80613 2907 bgsmws\n",
       "/global/cfs/cdirs/desi/target/fiberassign/tiles/trunk/080/fiberassign-080616.fits.gz\n",
       "80616 2720 bgsmws\n",
       "/global/cfs/cdirs/desi/target/fiberassign/tiles/trunk/080/fiberassign-080617.fits.gz\n",
@@ -1139,13 +1125,14 @@
     "fba_path = \"/global/cfs/cdirs/desi/target/fiberassign/tiles/trunk/\" \n",
     "for tileh in tiles_high_efftime:\n",
     "    tileid = tileh['TILEID']\n",
-    "    fba_file = os.path.join(fba_path, '{:03d}'.format(tileid//1000), 'fiberassign-{:06d}.fits.gz'.format(tileid))\n",
-    "    print(fba_file)\n",
-    "    d = Table(fitsio.read(fba_file, \"FIBERASSIGN\"))\n",
-    "    in_dark = np.isin(d['TARGETID'], main_dark['TARGETID'])\n",
-    "    in_bright = np.isin(d['TARGETID'], main_bright['TARGETID'])\n",
-    "    in_main = np.count_nonzero(in_dark|in_bright)\n",
-    "    print(tileid, in_main, tileh['FAPRGRM'])"
+    "    if tileid not in all_vi['TILEID']:\n",
+    "        fba_file = os.path.join(fba_path, '{:03d}'.format(tileid//1000), 'fiberassign-{:06d}.fits.gz'.format(tileid))\n",
+    "        print(fba_file)\n",
+    "        d = Table(fitsio.read(fba_file, \"FIBERASSIGN\"))\n",
+    "        in_dark = np.isin(d['TARGETID'], main_dark['TARGETID'])\n",
+    "        in_bright = np.isin(d['TARGETID'], main_bright['TARGETID'])\n",
+    "        in_main = np.count_nonzero(in_dark|in_bright)\n",
+    "        print(tileid, in_main, tileh['FAPRGRM'])"
    ]
   },
   {
